# blog

./: .gitmodules  Makefile  pyproject.toml
hugo/: config.toml
hugo/content/about/: about.md
hugo/content/page/: about.md
hugo/content/posts/: fizzbuzz.md  hello-jupyter.md  my-first-post.md
notebooks/: fizzbuzz.ipynb  hello-jupyter.ipynb
