[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Edison Gustavo Muenz blog"
authors = ["Edison Gustavo Muenz"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
nb2hugo = {git = "https://github.com/edisongustavo/nb2hugo.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
