[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Edison Gustavo Muenz blog"
authors = ["Edison Gustavo Muenz"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nb2hugo = {git = "https://github.com/edisongustavo/nb2hugo.git"}
altair = "^4.1.0"
jupyter = "^1.0.0"
seaborn = "^0.11.0"
torch = "^1.6.0"
tqdm = "^4.50.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
